Some statistic calculations added; some formatting for reading ease

--- a/src/Components/GameInput/GameInput.css
+++ b/src/Components/GameInput/GameInput.css
@@ -1,7 +1,5 @@
 table {
-    font-family: Oswald, sans-serif;
     font-size: 3.5em;
-    color: white; 
     width: 90%;
     border-collapse: collapse;
     align-content: center;
@@ -14,26 +12,10 @@ th {
     width: 40px;
     padding-bottom: 20px;
     text-align: center;
-    
-}
-
-.name-column {
-    color: white;
-    height:40px;
-    width:20px;
-}
-
-.input-table {
-    padding-bottom: 30%;
-    padding-left: 150px;
 }
 
 .score-input {
     width: 60px;
-}
-
-.name-input {
-    width: 350px;
 }
 
 .submit {
@@ -62,4 +44,8 @@ th {
     background-color: #0e0920;
     transform: translateY(4px);
     transition-duration: 0.15s;
+}
+
+.name-column {
+    max-width: 300px;
 }
