--- a/src/Components/App/App.css
+++ b/src/Components/App/App.css
@@ -1,21 +1,32 @@
+h1 {
+  color: white;
+  font-family: Oswald, sans-serif;
+  font-size: 8em;
+  font-weight: bold;
+}
+
+h2 {
+  color: white;
+  font-family: Oswald, sans-serif;
+}
+
+p {
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  font-size: 1.5em;
+}
+
 .App {
   text-align: center;
   background-color: #582c83;
+  color: white;
+  font-family: Oswald, sans-serif;
 }
 
 .App-header {
-  font-family: Oswald, sans-serif;
   min-height:500px;
   display: flex;
   align-items: center;
   justify-content: center;
-  font-size: 8em;
-  color: white;
-  font-weight: bold;
-}
-
-.App-link {
-  color: #61dafb;
 }
 
 .logo {
