--- a/src/Components/Scores/Scores.css
+++ b/src/Components/Scores/Scores.css
@@ -1,3 +1,24 @@
-.print {
-    color: white;
+table {
+    font-size: 3.5em;
+    width: 90%;
+    border-collapse: collapse;
+    align-content: center;
+    text-align: center;
+    margin-top: 100px;
+    margin-bottom: 30px;
+}
+
+th {
+    height: 40px;
+    width: 40px;
+    padding-bottom: 20px;
+    text-align: center;
+}
+
+.print td {
+    padding: 20px;
+}
+
+.name-column {
+    width: 300px;
 }
