--- a/src/Components/Statistics/Statistics.css
+++ b/src/Components/Statistics/Statistics.css
@@ -3,7 +3,15 @@ h2 {
 }
 
 .stats p {
-    text-align: left;
-    margin: 0 0 0 42%;
     font-size: 2em;
+    text-align: left;
+    margin-left: 100px;
+}
+
+.stats table {
+    margin-left: 100px;
+}
+.stats th {
+    font-size: 0.5em;
+    padding: 20px;
 }
