--- a/src/Components/App/App.css
+++ b/src/Components/App/App.css
@@ -8,11 +8,16 @@ h1 {
 h2 {
   color: white;
   font-family: Oswald, sans-serif;
+  font-size: 5em;
 }
 
 p {
   font-family: Verdana, Geneva, Tahoma, sans-serif;
-  font-size: 1.5em;
+  font-size: 2em;
+}
+
+label {
+  font-size: 2em;
 }
 
 .App {
