--- a/src/Components/App/App.css
+++ b/src/Components/App/App.css
@@ -11,6 +11,12 @@ h2 {
   font-size: 5em;
 }
 
+h3 {
+  color: white;
+  font-family: Oswald, sans-serif;
+  font-size: 3em;
+}
+
 p {
   font-family: Verdana, Geneva, Tahoma, sans-serif;
   font-size: 2em;
