Chart font colors and sizes adjusted; placeholder pie chart functioning

--- a/src/Components/Statistics/Statistics.css
+++ b/src/Components/Statistics/Statistics.css
@@ -27,3 +27,9 @@ h2 {
 .bar-data {
     font-size: 0.8em;
 }
+
+.line-chart {
+    font-size:2em;
+    display: flex;
+    justify-content: center;
+}
