--- a/src/Components/App/App.css
+++ b/src/Components/App/App.css
@@ -29,7 +29,7 @@ label {
 
 .App {
   text-align: center;
-  background-color: #582c83;
+  background-color: #201547;
   color: white;
   font-family: Oswald, sans-serif;
 }
