--- a/src/Components/CreatePlayerProfile/CreatePlayerProfile.css
+++ b/src/Components/CreatePlayerProfile/CreatePlayerProfile.css
@@ -1,5 +1,5 @@
 button {
-    background-color: #201547;
+    background-color: #582c83;
     color: white;
     font-family: Oswald, sans-serif;
     font-size: 2em;
@@ -11,13 +11,13 @@ button {
 
 button:hover{
     box-shadow: 0 12px 16px 0 #f2c01a4f, 0 17px 50px 0 #f2c01a75;
-    background-color: #0e0920;
+    background-color: #30144d;
     transition-duration: 0.4s;
 }
 
 button:active {
     box-shadow: 0 12px 16px 0 #f2c01a00, 0 17px 50px 0 #f2c01a00;
-    background-color: #0e0920;
+    background-color: #30144d;
     transform: translateY(4px);
     transition-duration: 0.15s;
 }
