--- a/src/Components/Statistics/Statistics.css
+++ b/src/Components/Statistics/Statistics.css
@@ -33,3 +33,9 @@ h2 {
     display: flex;
     justify-content: center;
 }
+
+.stacked-area-chart {
+    font-size: 2em;
+    display: flex;
+    justify-content: center;
+}
