--- a/src/Components/Statistics/Statistics.css
+++ b/src/Components/Statistics/Statistics.css
@@ -9,6 +9,17 @@ h2 {
     margin-left: 100px;
 }
 
+#gameTotalTable th {
+    text-align: right;
+    font-size: 1em;
+    width: 50%;
+}
+
+#gameTotalTable td {
+    text-align: left;
+    width: 50%;
+}
+
 .stats table {
     margin-left: 100px;
 }
