--- a/src/Components/Statistics/Statistics.css
+++ b/src/Components/Statistics/Statistics.css
@@ -12,18 +12,16 @@ h2 {
 
 #gameTotalTable th {
     text-align: right;
-    font-size: 1em;
+    font-size: 0.5em;
     width: 50%;
 }
 
 #gameTotalTable td {
     text-align: left;
+    font-size: 0.5em;
     width: 50%;
 }
 
-.stats table {
-    margin-left: 100px;
-}
 .stats table th {
     font-size: 0.5em;
 }
@@ -36,11 +34,6 @@ h2 {
     padding-top: 50px;
 }
 
-.bar-chart {
-    display: flex;
-    justify-content: center;
-}
-
 .line-chart {
     font-size:2em;
     display: flex;
@@ -49,6 +42,11 @@ h2 {
 
 .stacked-area-chart {
     font-size: 2em;
+    display: flex;
+    justify-content: center;
+}
+
+.all-scores-pie-chart {
     display: flex;
     justify-content: center;
 }
