--- a/src/Components/hole-stats/hole-stats.css
+++ b/src/Components/hole-stats/hole-stats.css
@@ -1,7 +1,11 @@
-h4 {
+.hole-charts {
+    display: flex;
+}
+
+#id {
     font-size: 2em;
 }
 
-.hole-charts {
-    display: flex;
+.hole-stats {
+    padding-bottom: 100;
 }
