--- a/src/Components/App/App.css
+++ b/src/Components/App/App.css
@@ -1,3 +1,10 @@
+div {
+  text-align: center;
+  background-color: #201547;
+  color: white;
+  font-family: Oswald, sans-serif;
+}
+
 h1 {
   color: white;
   font-family: Oswald, sans-serif;
@@ -8,7 +15,7 @@ h1 {
 h2 {
   color: white;
   font-family: Oswald, sans-serif;
-  font-size: 5em;
+  font-size: 3.5em;
 }
 
 h3 {
@@ -19,28 +26,52 @@ h3 {
 
 p {
   font-family: Verdana, Geneva, Tahoma, sans-serif;
-  font-size: 2em;
 }
 
 label {
   font-size: 2em;
 }
 
+message {
+  font-size: 2em;
+}
 
-.App {
-  text-align: center;
-  background-color: #201547;
-  color: white;
-  font-family: Oswald, sans-serif;
+table {
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .App-header {
-  min-height:500px;
+  min-height:400px;
   display: flex;
   align-items: center;
   justify-content: center;
 }
 
-.logo {
+#logo {
   max-height: 200px;
+}
+
+button {
+  background-color: #582c83;
+  color: white;
+  font-family: Oswald, sans-serif;
+  font-size: 2em;
+  padding: 20px;
+  border: 2px solid #f2be1a;
+  cursor: pointer;
+  margin: 20px;
+}
+
+button:hover{
+  box-shadow: 0 12px 16px 0 #f2c01a4f, 0 17px 50px 0 #f2c01a75;
+  background-color: #30144d;
+  transition-duration: 0.4s;
+}
+
+button:active {
+  box-shadow: 0 12px 16px 0 #f2c01a00, 0 17px 50px 0 #f2c01a00;
+  background-color: #30144d;
+  transform: translateY(4px);
+  transition-duration: 0.15s;
 }
