--- a/src/Components/Statistics/Statistics.css
+++ b/src/Components/Statistics/Statistics.css
@@ -1,52 +1,49 @@
-h2 {
-    text-align: center;
+#game-total-table {
+    width: 40%;
+    margin: 0 auto;
 }
 
-
-
-.stats p {
+#game-total-table th {
     font-size: 2em;
-    text-align: left;
-    margin-left: 100px;
-}
-
-#gameTotalTable th {
+    padding: 15px;
     text-align: right;
-    font-size: 0.5em;
-    width: 50%;
+    width: 40%;
 }
 
-#gameTotalTable td {
-    text-align: left;
-    font-size: 0.5em;
-    width: 50%;
-}
-
-.stats table th {
-    font-size: 0.5em;
-}
-
-.individualHoleCharts th {
-    font-size: 1em;
-}
-
-.individualHoleCharts td {
-    padding-top: 50px;
-}
-
-.line-chart {
-    font-size:2em;
-    display: flex;
-    justify-content: center;
-}
-
-.stacked-area-chart {
+#game-total-table td {
     font-size: 2em;
-    display: flex;
-    justify-content: center;
+    padding: 15px;
 }
 
-.all-scores-pie-chart {
-    display: flex;
-    justify-content: center;
+#all-holes-table {
+    width: 60%;
+    padding-top: 40px;
+}
+
+#all-holes-table th{
+    font-size: 2em;
+}
+
+#all-holes-table td {
+    font-size: 2em;
+    padding: 10px;
+}
+
+#rank-list-table {
+    width: 80%;
+    margin-top: 40px;
+}
+
+#rank-list-table th {
+    font-size: 2em;
+}
+
+#rank-list-table td {
+    font-size: 2em;
+    padding-top: 10px;
+}
+
+#hole-select {
+    height: 60px;
+    width: 60px;
 }
