--- a/src/Components/create-player/create-player.css
+++ b/src/Components/create-player/create-player.css
@@ -1,23 +1,3 @@
-button {
-    background-color: #582c83;
-    color: white;
-    font-family: Oswald, sans-serif;
-    font-size: 2em;
-    padding: 20px;
-    border: 2px solid #f2be1a;
-    cursor: pointer;
-    margin: 20px;
-}
-
-button:hover{
-    box-shadow: 0 12px 16px 0 #f2c01a4f, 0 17px 50px 0 #f2c01a75;
-    background-color: #30144d;
-    transition-duration: 0.4s;
-}
-
-button:active {
-    box-shadow: 0 12px 16px 0 #f2c01a00, 0 17px 50px 0 #f2c01a00;
-    background-color: #30144d;
-    transform: translateY(4px);
-    transition-duration: 0.15s;
+#new-player-name {
+    height: 50px;
 }
