--- a/src/Components/game-input/game-input.css
+++ b/src/Components/game-input/game-input.css
@@ -1,51 +1,27 @@
-table {
-    font-size: 3.5em;
-    width: 90%;
-    border-collapse: collapse;
-    align-content: center;
-    text-align: center;
-    margin-bottom: 30px;
+.game-input table {
+    width: 80%;
 }
 
-th {
-    height: 40px;
+.game-input th {
+    font-size: 2em;
+    padding-bottom: 10px;
+}
+
+.game-input td {
+    font-size: 2em;
+}
+
+#player-select {
+    height: 50px;
+    width: 300px;
+}
+
+#score-input-box {
     width: 40px;
-    padding-bottom: 20px;
-    text-align: center;
+    height: 40px;
 }
-
-.score-input {
-    width: 60px;
-}
-
+  
 .submit {
     width:100px;
 }
-
-.button {
-    background-color: #582c83;
-    color: white;
-    font-family: Oswald, sans-serif;
-    font-size: 2em;
-    padding: 20px;
-    border: 2px solid #f2be1a;
-    cursor: pointer;
-    margin: 20px;
-}
-
-.button:hover{
-    box-shadow: 0 12px 16px 0 #f2c01a4f, 0 17px 50px 0 #f2c01a75;
-    background-color: #30144d;
-    transition-duration: 0.4s;
-}
-
-.button:active {
-    box-shadow: 0 12px 16px 0 #f2c01a00, 0 17px 50px 0 #f2c01a00;
-    background-color: #30144d;
-    transform: translateY(4px);
-    transition-duration: 0.15s;
-}
-
-.name-column {
-    max-width: 300px;
-}
+  
