--- a/src/Components/App/App.css
+++ b/src/Components/App/App.css
@@ -8,8 +8,9 @@ div {
 h1 {
   color: white;
   font-family: Oswald, sans-serif;
-  font-size: 8em;
+  font-size: 5em;
   font-weight: bold;
+  line-height: 95%;
 }
 
 h2 {
@@ -41,16 +42,30 @@ table {
   margin-right: auto;
 }
 
+.cody-evins-logo{
+  display: flex;
+  justify-content: right;
+}
+
 .App-header {
-  min-height:400px;
+  padding-bottom: 100px;
   display: flex;
   align-items: center;
   justify-content: center;
 }
 
 #logo {
-  max-height: 200px;
+  height: 250px;
+  padding: 20px 15px 0 0;
 }
+
+#page-title {
+  text-align: left;
+}
+
+ #CE {
+   max-height: 125px;
+ }
 
 button {
   background-color: #582c83;
