Input Validation for Game Input; Create team no longer sends alert

--- a/src/Components/Statistics/Statistics.css
+++ b/src/Components/Statistics/Statistics.css
@@ -20,6 +20,11 @@
     padding-top: 40px;
 }
 
+#all-holes-table-title {
+    text-align: center;
+    column-span: all;
+}
+
 #all-holes-table th{
     font-size: 2em;
 }
