--- a/src/Components/App/App.css
+++ b/src/Components/App/App.css
@@ -1,3 +1,24 @@
+.router {
+  height: 500px;
+}
+
+ul {
+  height: 100px;
+  display: flex;
+  align-items: flex-start;
+  justify-content: center;
+}
+
+li {
+  font-size: 3em;
+  display: inline;
+  margin:30px;
+}
+
+li a {
+  color: #aadeeb;
+}
+
 div {
   text-align: center;
   background-color: #201547;
