--- a/src/Components/Statistics/Statistics.css
+++ b/src/Components/Statistics/Statistics.css
@@ -49,6 +49,8 @@
 }
 
 #hole-select {
-    height: 60px;
-    width: 60px;
+    height: 80px;
+    width: 80px;
+    font-size: 2.5em;
+    text-align: center;
 }
