--- a/src/Components/game-input/game-input.css
+++ b/src/Components/game-input/game-input.css
@@ -14,12 +14,17 @@
 #player-select {
     height: 50px;
     width: 300px;
+    text-align: center;
 }
 
-#score-input-box {
+.score-input-box {
     width: 40px;
     height: 40px;
+    border-radius: 20%;
+    text-align: center;
+    justify-content: center;
 }
+
   
 .submit {
     width:100px;
