--- a/src/Components/rankings/rankings.css
+++ b/src/Components/rankings/rankings.css
@@ -1,20 +1,25 @@
+.rankings {
+    padding-bottom: 100px;
+}
+
 .rankings-table {
     width: 80%;
     height: auto;
-    padding: 10px;
+    border: ridge white 6px;
+    border-collapse:collapse;
 }
 
-table, th, td {
-    border: solid white 1px;
-    border-collapse:separate;
-}
-
-th {
+#rank-table-header {
     font-size: 2em;
-    height: 50px;
+    padding: 20px 10px;
+    border: outset white 2px;
+    border-collapse: collapse;
 }
 
-td {
-    font-size: 2em;
-    height: 50px;
+#rank-table-data {
+    font-family:Arial, Helvetica, sans-serif;
+    font-size: 1.8em;
+    border: dashed white 1px;
+    border-collapse: collapse;
 }
+
