Submit no longer needs refresh (again), getElementByID replaced w state

--- a/src/Components/App/App.css
+++ b/src/Components/App/App.css
@@ -72,7 +72,7 @@ table {
 .cody-evins-logo{
   display: flex;
   justify-content: right;
-  animation: fade 1.5s ease-in;
+  animation: slow-fade 3s ease-in;
 }
 
 .App-header {
